--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "dotenv": "^17.2.2",
+    "lucide-vue-next": "^0.555.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
