--- a/package.json
+++ b/package.json
@@ -9,19 +9,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/vue": "^10.32.1",
     "@supabase/supabase-js": "^2.57.4",
+    "@tanstack/vue-query": "^5.92.4",
+    "@vueuse/core": "^14.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.2",
     "lucide-vue-next": "^0.556.0",
+    "ofetch": "^1.5.1",
     "pinia": "^3.0.4",
+    "radix-vue": "^1.9.17",
+    "tailwind-merge": "^3.4.0",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
+    "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.11",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.6.2",
+    "happy-dom": "^20.0.11",
     "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
     "tailwindcss": "^4.1.13",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vitest": "^4.0.16"
   }
 }
