--- a/recuperaIAv1/package.json
+++ b/recuperaIAv1/package.json
@@ -25,6 +25,7 @@
     "pinia-plugin-persistedstate": "^4.7.1",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.21",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.5.1",
     "vue-sonner": "^1.3.2",
     "yup": "^1.7.1"
